--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
+  "type": "module",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
