--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "type": "module",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.19.2",
+    "body-parser": "^1.20.3",
+    "cookie": "0.7.1",
+    "cookie-parser": "^1.18.0",
+    "express": "^4.21.0",
     "express-session": "^1.18.0",
     "mongoose": "^8.3.5",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "qs": "6.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
