--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cookie": "0.7.1",
-    "cookie-parser": "^1.18.0",
+    "cookie-parser": "1.46.0",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "mongoose": "^8.3.5",
