--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@types/koa-static": "^4.0.4",
     "bcrypt": "^5.1.1",
-    "koa": "^2.16.1",
+    "koa": "^2.16.3",
     "koa-bodyparser": "4.4.1",
     "koa-logger": "",
     "koa-mount": "^4.0.0",
@@ -25,7 +25,7 @@
     "koa-session": "6.4.0",
     "koa-static": "^5.0.0",
     "mongoose": "8.9.5",
-    "morgan": "1.10.0",
+    "morgan": "^1.10.1",
     "passport": "0.7.0",
     "passport-local": "1.0.0",
     "pug": "3.0.3"
